--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,11 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />
-  <title>React Reading List</title>
+  <title>Click and React</title>
 </head>
 
 <body>
   <noscript>
-    You need to enable JavaScript to run this app.
   </noscript>
   <div id="root"></div>
 </body>
